--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ ext {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter')
+    compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.cloud:spring-cloud-starter-aws')
     compile('org.springframework.cloud:spring-cloud-starter-aws-messaging')
     compile("org.springframework.cloud:spring-cloud-aws-context")
